tests/paczka1/small_fuzzy/14434547.err
Error in line 1: wuTjy1V S282 80,3
Error in line 6: FzDh S362 -1,9
Error in line 2: FzDh S362 8,9
Error in line 9: bBis5A S282 68,2
